<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_world">Hello pumpkin!</string>
    <string name="app_name">pumpkin</string>
    <string name="book_image_description">Book Image</string>
    <string name="book_title">Book Title</string>
    <string name="facebook_signin_button">Sign in with Facebook</string>
    <string name="twitter_signin_button">Sign in with Twitter</string>
    <string name="google_signin_button">Sign in with Google</string>
    <string name="yahoo_signin_button">Sign in with Yahoo</string>
    <string name="browse_books_button">Books</string>
    <string name="shops_button">Shops</string>
    <string name="lists_button">My Wishlists</string>
    <string name="settings_button">Settings</string>
    <string name="search_pincode">Search</string>
    <string name="new_list">Create New</string>
    <string name="wishListItem">Wish Listed</string>
</resources>
