<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:orientation="vertical"
              android:layout_height="fill_parent">

    <TextView android:id="@+id/welcome" android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <Button android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:text="@string/lists_button" android:id="@+id/listsButton"/>

    <Button android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:text="@string/browse_books_button" android:id="@+id/browseButton"/>

    <Button android:layout_height="wrap_content" android:layout_width="fill_parent"
    android:text="@string/shops_button" android:id="@+id/shopsButton"/>

    <Button android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:text="@string/settings_button" android:id="@+id/settingsButton"/>
</LinearLayout>