<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ImageView android:id="@+id/facebookSiginin" android:contentDescription="@string/facebook_signin_button"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content" android:src="@drawable/facebook"
               android:layout_gravity="center_horizontal|center_vertical" android:padding="15dip"/>
    <ImageView android:id="@+id/twitterSiginin" android:contentDescription="@string/twitter_signin_button"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content" android:src="@drawable/twitter"
               android:layout_gravity="center_horizontal|center_vertical" android:padding="15dip"/>
    <ImageView android:id="@+id/googleSiginin" android:contentDescription="@string/google_signin_button"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content" android:src="@drawable/google"
               android:layout_gravity="center_horizontal|center_vertical" android:padding="15dip"/>
    <ImageView android:id="@+id/yahooSiginin" android:contentDescription="@string/yahoo_signin_button"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content" android:src="@drawable/yahoo"
               android:layout_gravity="center_horizontal|center_vertical" android:padding="15dip"/>
</LinearLayout>
